# mcp-obsidian

./: .gitignore  README.md  mcp_obsidian.py  pyproject.toml
