[project]
name = "mcp-obsidian"
version = "0.2.1"
description = "MCP server for Obsidian vault search"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.1.1",
    "chromadb>=1.1.0",
    "langchain-text-splitters>=0.3.11",
    "fastmcp>=2.11.3",
    "pydantic>=2.0.0",
    "watchdog>=6.0.0",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"

[tool.setuptools]
py-modules = ["mcp_obsidian"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
